  bool value is always true.

Changes:

* Verbosity 0 means exception's class name.
* The exception object returns 
* The default verbosity for stringification of exception object is 0.
* The FIELD constant renamed to ATTRS as far as every OO language calls it
  attributes.
* An unknown attribute will be ignored instead to be part of properties
  attribute.

------------------------------------------------------------------------
0.15 | Piotr Roszatycki <dexter@debian.org> | 2008-04-19

New:

* throw() method is exported with ":all" tag.  It can break the code which
  uses indirect notation.

Changes:

* Drop indirect notation is POD and code.

------------------------------------------------------------------------
0.14 | Piotr Roszatycki <dexter@debian.org> | 2008-04-13

New:

* New verbosity level 4. Always dumps full stack trace. The ignore_package and
  ignore_level has meaning only for first line of the error message.
* New field ignore_class which filters stack trace.
* New syntax for import. The default values (verbosity, message, ignore_*,
  ...) can be replaced or changed based on previous value.
* Show package in stack trace.

Changes:

* Updated bundled Test::Unit::Lite to 0.0903.

------------------------------------------------------------------------
0.13 | Piotr Roszatycki <dexter@debian.org> | 2007-11-19

Changes:

* If the error stack is empty, the catch method returns undefined value.
* Updated bundled Test::Unit::Lite to 0.0701.

------------------------------------------------------------------------
0.12 | Piotr Roszatycki <dexter@debian.org> | 2007-10-29

Fixes:

* ignore_level has meaning only for non-skipped levels.
* Changed $SIG{__DIE__} does not interfere with evals used internally.

Changes:

* ignore_level and ignore_package does not change caller_info. This attributes
  have meaning only for stringify output. 
* package, file, line, subroutine are now methods, not attributes anymore.